# Maya-Firewall

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: maya.toml
config/yara/: starter_rules.yar
crates/maya-ai/: Cargo.toml
crates/maya-ai/src/: brain.rs  lib.rs  prompts.rs
crates/maya-cli/: Cargo.toml
crates/maya-cli/src/: main.rs
crates/maya-consensus/: Cargo.toml
crates/maya-consensus/src/: hotstuff.rs  lib.rs
crates/maya-core/: Cargo.toml
crates/maya-core/src/: config.rs  error.rs  events.rs  lib.rs  types.rs  utils.rs
crates/maya-crypto/: Cargo.toml
crates/maya-crypto/src/: aead.rs  hybrid.rs  keys.rs  lib.rs
crates/maya-dashboard/: Cargo.toml
crates/maya-dashboard/src/: api.rs  lib.rs  server.rs  state.rs
crates/maya-dashboard/tests/: event_flow_integration.rs
crates/maya-deception/: Cargo.toml
crates/maya-deception/src/: container.rs  fakegen.rs  filesystem.rs  lib.rs  orchestrator.rs  services.rs  shell.rs
crates/maya-network/: Cargo.toml
crates/maya-network-ebpf/: Cargo.toml
crates/maya-network-ebpf/.cargo/: config.toml
crates/maya-network-ebpf/src/: main.rs
crates/maya-network/src/: detector.rs  engine.rs  lib.rs  packet.rs  scanner.rs  session.rs  xdp.rs
crates/maya-profiler/: Cargo.toml
crates/maya-profiler/src/: analyzer.rs  lib.rs
crates/maya-sandbox/: Cargo.toml
crates/maya-sandbox/src/: engine.rs  lib.rs
dashboard/: package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.css  App.jsx  index.css
scripts/: build-ebpf.sh  run-taipy-dashboard.sh  validate_workspace_metadata.py
taipy_dashboard/: README.md  app.py  requirements.txt
tla/: MayaConsensus.tla
