[package]
name = "maya-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Generative Deception AI - LLM-powered realistic system state generation"

[dependencies]
maya-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
tera = { workspace = true }
