[package]
name = "maya-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Project MAYA CLI - Command-line interface for the Active Deception Grid"

[[bin]]
name = "maya"
path = "src/main.rs"

[dependencies]
maya-core = { workspace = true }
maya-network = { workspace = true }
maya-deception = { workspace = true }
maya-ai = { workspace = true }
maya-sandbox = { workspace = true }
maya-crypto = { workspace = true }
maya-consensus = { workspace = true }
maya-profiler = { workspace = true }
maya-dashboard = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
