[package]
name = "maya-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core types, configuration, and shared utilities for Project MAYA"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
