[package]
name = "maya-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SOC Dashboard - Real-time threat visualization, attacker tracking, and alert management"

[dependencies]
maya-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
maya-network = { workspace = true }
maya-deception = { workspace = true }
