[package]
name = "maya-deception"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Dynamic Deception Orchestrator - Spawns realistic fake environments on-the-fly"

[dependencies]
maya-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bollard = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
fake = { workspace = true }
tera = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
