[package]
name = "maya-profiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Adversary Behavior Profiler - Keystroke dynamics, TTP analysis, APT attribution"

[dependencies]
maya-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
