[package]
name = "maya-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "WebAssembly Malware Sandbox - Safe execution and analysis of malicious payloads"

[dependencies]
maya-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
wasmtime = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
